<resources>
    <string name="app_name">FULL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_invite">Invite Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_booking_history">Booking History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_pending_orders">Pending Orders</string>
    <string name="menu_users">Users</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_manage_price">Manage Price</string>
    <string name="menu_feedback_lists">Feedback</string>
    <string name="menu_fragment_fuels">Manage Fuels</string>
</resources>